<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/firstlayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:theme="@style/AppTheme_alt"
    tools:context=".ui.notifications.activities.NotificationActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/fragment_place_search_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"


        >

        <EditText
            android:id="@+id/activity_search_search_query"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:hint="@string/search_query_term"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="@dimen/text_size_title" />

        <LinearLayout
            android:id="@+id/time_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/textview_from_date"
                style="@style/Widget.AppCompat.Spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:background="?attr/editTextBackground"
                android:drawableEnd="@drawable/arrow_down"
                android:text="@string/begin_date"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/textview_to_date"
                style="@style/Widget.AppCompat.Spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:background="?attr/editTextBackground"
                android:drawableEnd="@drawable/arrow_down"
                android:text="@string/end_date"
                android:textSize="@dimen/text_size_normal" />
        </LinearLayout>

        <include
            android:id="@+id/layout_search_categories"
            layout="@layout/checkbox_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/btn_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@android:color/darker_gray"
            android:dividerPadding="30dp"
            android:orientation="vertical"
            android:padding="20dp"
            android:showDividers="beginning">

            <Button
                android:id="@+id/activity_search_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/colorPrimary"
                android:enabled="false"
                android:text="@string/search"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_bigger" />


        </LinearLayout>

    </LinearLayout>
</LinearLayout>