<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/notification_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/AppTheme_alt"
    tools:context=".ui.notifications.activities.NotificationActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/activity_notifications_search_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:hint="@string/search_query_term"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="@dimen/text_size_title" />

    <include
        android:id="@+id/layout_notification_categories"
        layout="@layout/checkbox_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@android:color/darker_gray"
        android:dividerPadding="30dp"
        android:orientation="vertical"
        android:padding="20dp"
        android:showDividers="beginning">

        <Switch
            android:id="@+id/notification_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:padding="20dp"
            android:text="@string/enable_notifications"
            android:textSize="@dimen/text_size_normal" />


    </LinearLayout>
</LinearLayout>